force-app/main/default/objects/Dimension__c/Dimension__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Depending on the Dimension, the Galaxy and Planets might differ.</description>
    <label>Dimension</label>
</CustomObject>