force-app/main/default/objects/Dimension__c/fields/Dimension_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Creation_Date__c</fullName>
    <label>Dimension Creation Date</label>
    <type>Date</type>
</CustomField>