force-app/main/default/objects/Dimension__c/fields/Dimension_Name__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Name__c</fullName>
    <externalId>true</externalId>
    <label>Dimension Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>