force-app/main/default/objects/Dimension__c/fields/isParallel__c.field-meta.xml
<CustomField>
    <fullName>isParallel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isParallel</label>
    <type>Checkbox</type>
</CustomField>