force-app/main/default/objects/Dimension__c/fields/Relative_Similarity__c.field-meta.xml
<CustomField>
    <fullName>Relative_Similarity__c</fullName>
    <description>Relative similarity to where the user currently is located</description>
    <inlineHelpText>Relative similarity to where the user currently is located</inlineHelpText>
    <label>Relative Similarity</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>